hunting rounding questions